--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/seultt/shortenerURL#readme",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.15.4"
   }
 }
