--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/seultt/shortenerURL#readme",
   "dependencies": {
     "ejs": "^2.5.7",
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "express-basic-auth": "^1.1.2",
+    "morgan": "^1.8.2"
   }
 }
